Changed inline svgs to data uris to stop CSS bleeding

--- a/static/css/icons.css
+++ b/static/css/icons.css
@@ -14,7 +14,7 @@
     resize: vertical;
 }
 
-.icon-picker svg {
+.icon-picker img {
     width: 30px;
     height: 30px;
 
